--- a/e2e/tsconfig.e2e.json
+++ b/e2e/tsconfig.e2e.json
@@ -10,5 +10,13 @@
       "jasminewd2",
       "node"
     ]
+  },
+  "files": [
+    "../src/app/rxjs-imports.ts"
+  ],
+  "rules": {
+    "rxjs-add": { 
+      "severity": "off" 
+    }
   }
 }
